# crud-dynamodb

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: client.py  main.py
app/clients/: aws_client.py
app/dependency_injection/: clients_di.py  implementations_di.py
app/implementations/: dynamo_implementation.py
infraestructure/fake_aws/: .aws.env
