[tool.poetry]
name = "mi_app"
version = "0.1.0"
description = "dynamo-poc"
authors = []

[tool.poetry.dependencies]
python = "^3.10.4"
boto3 = "^1.17.80"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
requests = "^2.27.1"
cerealbox = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.3.0"

[tool.black]
line_length = 99
